# naspi-control

./: Cargo.toml  LICENSE  README.md
.github/workflows/: continuous-integration.yml  rust.yml
debian/: naspi-control.service  service
src/: fan_control.rs  main.rs
